<resources>
    <string name="app_name">Proyecto tfc</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_juegos">Juegos</string>
    <string name="title_buscar_personas">Buscar Personas</string>
    <string name="hint_et_usuario">Introduce un correo</string>
    <string name="hint_et_contraseña">Introduce Contraseña</string>
    <string name="tv_registro">¿No eres miembro? Registrate</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="msg_Error">Tienes que rellenar todos los campos</string>
    <string name="et_hint_nombre">Introduzca tu nombre completo</string>
    <string name="et_hint_correo">Introduzca tu correo</string>
    <string name="et_hint_telefono">Introduzca numero de telefono</string>
    <string name="et_hint_contraseña">Introduzca contraseña</string>
    <string name="tv_tienes_cuenta">¿Tienes una cuenta? Inicia Sesion</string>
    <string name="btn_guardarR">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tv_reg_txt">REGISTRO</string>
    <string name="hint_et_log_user">Email</string>
    <string name="hint_et_log_pass">Contraseña</string>
    <string name="btn_log_acceder">Acceder</string>
    <string name="tv_log_register">Registrarse como usuario</string>
    <string name="et_hint_contraseña_rep">Introduzca de nuevo la contraseña</string>
    <string name="msj_contrsena_error">Las contraseñas deben ser iguales y contener mas de 6 caracteres</string>
    <string name="msj_campo_vacio">Todos los campos tienen que estar completos</string>
    <string name="msj_email_error">Email incorrecto</string>
    <string name="msj_tel_comp">Telefono incorrecto</string>
    <string name="msj_registrado">Registro completado</string>
    <string name="msj_ya_registrado">Email ya registrado</string>
    <string name="msj_no_accede">Datos erróneos. Compruebe los datos</string>
    <string name="et_hin_nombre_juego">Introduce el nombre del juego</string>
    <string name="btn_consultar_juego">Consultar</string>
    <string name="msg_no_name">Tienes que poner el nombre de un juego</string>
    <string name="btn_cerrar_sesion">Cerrar Sesion</string>
    <string name="tv_genero_juego_detalle">Género: %1$s</string>
    <string name="tv_plataformas_juego_detalle">Plataformas: %1$s</string>
    <string name="btn_volver">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_descripcion">No hay descripción larga disponible</string>
    <string name="no_genero">No hay genero disponible</string>
    <string name="estado_del_juego">Estado del juego</string>
    <string name="title_estado_juego_dialog">Estado del juego</string>
    <string name="rdb_jugado">Lo he jugado</string>
    <string name="tv_info_juego_estado">Elige el estado del videojuego</string>
    <string name="rdb_completado">Lo he completado</string>
    <string name="rdb_a_medias">Lo he dejado a medias</string>
    <string name="rdb_olvido">Lo he olvidado</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_ok_no">Cancelar</string>
    <string name="msj_juego_est">Se ha guardado el estado del juego con exito</string>
    <string name="btn_buscar_personas">Buscar</string>
    <string name="hint_et_personas">Busca a un usuario</string>
    <string name="no_personas">No se han encontrado resultados</string>
    <string name="msg_Error_db">Error DB. Cancelado</string>
    <string name="email_du">Email: %1$s</string>
    <string name="telef_du">Teléfono: %1$s</string>
    <string name="btn_seguir">Seguir</string>
    <string name="txt_tv_completados">Juegos terminados al 100%</string>
    <string name="txt_tv_jugadoss">Juegos completados</string>
    <string name="txt_tv_medias">Juegos a medias</string>
    <string name="txt_tv_olivdado">Juegos abandonados</string>
    <string name="btn_juegos_jugados">Juegos Jugados</string>
    <string name="btn_juegos_completados">Juegos Completados</string>
    <string name="btn_juegos_medias">Juegos a medias</string>
    <string name="btn_juegos_olvidados">Juegos olvidados</string>
    <string name="msj_juego_est_val">Esta lista no tiene juegos</string>
    <string name="title_opciones">Opciones</string>
    <string name="tv_modo_oscuro">Tema Claro</string>
    <string name="tv_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="tv_confirmar">¿Estas seguro de querer eliminar tu cuenta? No podras recuperar tu cuenta</string>
    <string name="dialog_si_elim">Sí</string>
    <string name="dialog_no_elim">No</string>
    <string name="title_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="tv_modificar_cuenta">Modificar Cuenta</string>
    <string name="title_modificar_cuenta">Modificar Cuenta</string>
    <string name="dialog_si_mod">Sí</string>
    <string name="dialog_no_mod">No</string>
    <string name="tv_mod_cuenta_nom">Escriba el nombre por el que quiere modificar su actual nombre</string>
    <string name="hint_et_mod_cuenta_nom">Escriba su nuevo nombre</string>
    <string name="tv_mod_cuenta_telf">Escriba el telefono por el que quiere modificar su actual telefono</string>
    <string name="hint_et_mod_cuenta_telf">Escriba su nuevo telefono</string>
    <string name="btn_confirmar_mod">Confirmar Modificaciones</string>
    <string name="msj_no_juego">No hay juegos en la lista</string>
    <string name="title_eliminar_juego_dialog">Eliminar juego</string>
    <string name="tv_elim_juego">¿Seguro que quieres eliminar el juego de la lista?</string>
</resources>