<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_perfil">

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.dam.proyectotfc.ui.Perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_juegos"
        android:name="com.dam.proyectotfc.ui.Juegos.JuegosFragment"
        android:label="@string/title_juegos"
        tools:layout="@layout/fragment_juegos" />

    <fragment
        android:id="@+id/navigation_buscar_personas"
        android:name="com.dam.proyectotfc.ui.BuscarPersonas.BuscarPersonasFragment"
        android:label="@string/title_buscar_personas"
        tools:layout="@layout/fragment_buscar_personas" />
    <fragment
        android:id="@+id/navigation_opciones"
        android:name="com.dam.proyectotfc.ui.opciones.OpcionesFragment"
        android:label="@string/title_opciones"
        tools:layout="@layout/fragment_opciones"/>
</navigation>