<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margen"
    android:background="#222222">

    <RadioGroup
        android:id="@+id/rdgEstadoJuegos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rdbJugado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:textColor="#838383"
            android:text="@string/rdb_jugado"/>
        <RadioButton
            android:id="@+id/rdbCompletado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#838383"
            android:text="@string/rdb_completado"/>
        <RadioButton
            android:id="@+id/rdbAbandonado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#838383"
            android:text="@string/rdb_a_medias"/>
        <RadioButton
            android:id="@+id/rdbOlvidado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#838383"
            android:text="@string/rdb_olvido"/>
    </RadioGroup>

</LinearLayout>