<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/margen"
    tools:context=".RegistroActivity">


    <ImageView
        android:id="@+id/ivRegIcon"
        android:layout_width="@dimen/lados_iv_reg"
        android:layout_height="@dimen/lados_iv_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_gamer_self"/>

    <TextView
        android:id="@+id/tvRegTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivRegIcon"
        android:text="@string/tv_reg_txt"
        android:textColor="#f8e91a"
        android:gravity="center"
        android:layout_marginTop="@dimen/top_txt_reg"
        android:textSize="@dimen/tam_txt_reg"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/llDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margene"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegTxt"
        >
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:hint="@string/et_hint_nombre"
            android:layout_marginTop="@dimen/margenR"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textColor="@color/browser_actions_bg_grey"
            android:background="@drawable/et_desing"
            android:inputType="textPersonName|textCapWords"
            />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:hint="@string/et_hint_correo"
            android:layout_marginTop="@dimen/margenR"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textColor="@color/browser_actions_bg_grey"
            android:background="@drawable/et_desing"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textColor="@color/browser_actions_bg_grey"
            android:hint="@string/et_hint_telefono"
            android:layout_marginTop="@dimen/margenR"
            android:background="@drawable/et_desing"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/etContrasenaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textColor="@color/browser_actions_bg_grey"
            android:hint="@string/et_hint_contraseña"
            android:layout_marginTop="@dimen/margenR"
            android:background="@drawable/et_desing"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/etContrasenaRepR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:textColorHint="@color/browser_actions_bg_grey"
            android:textColor="@color/browser_actions_bg_grey"
            android:hint="@string/et_hint_contraseña_rep"
            android:layout_marginTop="@dimen/margenR"
            android:background="@drawable/et_desing"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBtns"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/llmargen_top"
        android:layout_marginBottom="@dimen/llmargen_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/btnGuardarR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:text="@string/btn_guardarR"
            android:layout_weight="1"
            app:backgroundTint="@null"
            android:background="@drawable/button_desing"
            />
        <Button
            android:id="@+id/btnCancelarR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfrancis"
            android:text="@string/btn_cancelar"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margen"
            app:backgroundTint="@null"
            android:background="@drawable/button_desing"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>