<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/margen"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_gamer_self"/>

    <EditText
        android:id="@+id/etLogUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:drawableStart="@drawable/email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_et_log_user"
        android:background="@drawable/et_desing"
        android:textColorHint="@color/browser_actions_bg_grey"
        android:textColor="@color/browser_actions_bg_grey"
        app:layout_constraintTop_toBottomOf="@+id/ivLogin"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etLogPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="10"
        android:drawableStart="@drawable/lock"
        android:inputType="textPassword"
        android:hint="@string/hint_et_log_pass"
        android:background="@drawable/et_desing"
        android:textColorHint="@color/browser_actions_bg_grey"
        android:textColor="@color/browser_actions_bg_grey"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etLogUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnLogAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_log_acceder"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLogPass"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_desing"/>

    <TextView
        android:id="@+id/tvLogRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_log_register"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/browser_actions_bg_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogAcceder" />



</androidx.constraintlayout.widget.ConstraintLayout>